1.3.10 (06.04.2016):

* Fixed double file overwrite confirmation


1.3.9 (06.03.2016):

* Fixed warning from Perl 5.10.1 about use of uninitialized value in subroutine
  entry in Gscan2pdf/Dialog/Scan/CLI.pm
* Store absolute date instead of offset
* If get_message_area() not available (because gtk+ is too old),
  use get_content_area() or vbox()
* Differentiate between readonly file and directory in error messages
* Fixed bug opening session file
* A deleted profile stays deleted across sessions
* Fixed multiple reload callback, affecting setting profiles
* If a profile affects geometry settings, update paper size widget appropriately
  Closes Debian bug #815552 (fails to set geometry when loading saved profile)


1.3.8 (04.02.2016):

* Fixed bug saving TIFF, introduced in v1.3.6.
  Closes Debian bug #812684 (cannot save in .tif format)
* Fixed bug running tesseract from OCR dialog, introduced in v1.3.7.
* Fixed bug saving, retrieving and applying profiles. Closes bug #163:
  (paper size changes not applied consistently)
* Update to Czech translation (thanks to Pavel Borecki)
* Update to Ukranian translation (thanks to Микола Ткач)


1.3.7 (16.01.2016):

* Fixed check that pages have been saved
* Fixed scan->rotate->unpaper->OCR chaining (again). Closes:
   bug #213 (Cant call method freeze on an undefined value)
   bug #215 (thanks to Alastair for testing)
* Filter out memory address from unpaper warning. Closes bug #205
  (Gscan2pdf problem with unpaper 6.2) and Debian bug #807565
  (Unpaper error dialog cannot be hidden permanently)
* Ensure that process numbering is properly reinitialised when queue is empty.
* Fixed error importing PDF with more than 999 pages. However, this exposed the
  problem that each page is held as an open temporary file and that the system
  can run out of file handles somewhere after 1000.


1.3.6 (20.12.2015):

* Use simplified tesseract call for tesseract >= 3.02.02. Closes patch #15