@@ -1,6 +1,7 @@
 1.3.10 (06.04.2016):
 
 * Fixed double file overwrite confirmation
+* Update paper size combobox after setting profile
 
 
 1.3.9 (06.03.2016):
